Add basic ODI stylings

--- a/app/views/root/_stylesheet.html.erb
+++ b/app/views/root/_stylesheet.html.erb
@@ -1,3 +1,4 @@
+<link href="http://assets.theodi.org/css/odi-bootstrap-green.css" rel="stylesheet">
 <%
   css_file = local_assigns[:css_file] || 'application'
 %>
