--- a/app/views/root/_base.html.erb
+++ b/app/views/root/_base.html.erb
@@ -1,130 +1,74 @@
 <!DOCTYPE html>
-<% html_classes = content_for?(:html_classes) ? "#{yield(:html_classes)}" : ''%>
-<!--[if lt IE 9]><html class="lte-ie8 <%= html_classes %>" lang="en"><![endif]-->
-<!--[if gt IE 8]><!--><html lang="en" class="<%= html_classes %>"><!--<![endif]-->
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+<html>
+	<% html_classes = content_for?(:html_classes) ? "#{yield(:html_classes)}" : ''%>
+	<!--[if lt IE 9]><html class="lte-ie8 <%= html_classes %>" lang="en"><![endif]-->
+	<!--[if gt IE 8]><!--><html lang="en" class="<%= html_classes %>"><!--<![endif]-->
+	<head>
+	  <title><%= content_for?(:title) ? yield(:title) : "Test Frontend" %></title>
 
-    <title><%= content_for?(:title) ? yield(:title) : "GOV.UK - The best place to find government services and information" %></title>
+	  <%= render partial: 'stylesheet', locals: { css_file: local_assigns[:css_file] || 'application' } %>
 
-    <%= render partial: 'stylesheet', locals: { css_file: local_assigns[:css_file] || 'application' } %>
+	  <%= render partial: "fonts" %>
 
-    <%= render partial: "fonts" %>
+	  <!--[if lt IE 9]>
+	    <%= javascript_include_tag 'ie.js' %>
+	  <![endif]-->
 
-    <!--[if lt IE 9]>
-      <%= javascript_include_tag 'ie.js' %>
-    <![endif]-->
+	  <%= render partial: "icons" %>
 
-    <%= render partial: "icons" %>
+	  <%= render partial: 'javascript', locals: { js_file: local_assigns[:js_file] || 'application' } unless local_assigns[:js_at_the_end] %>
 
-    <%= render partial: 'javascript', locals: { js_file: local_assigns[:js_file] || 'application' } unless local_assigns[:js_at_the_end] %>
-  </head>
+	  <%= csrf_meta_tags %>
+	</head>
+	<body<%= content_for?(:body_classes) ? " class=\"#{yield(:body_classes)}\"".html_safe : '' %>>
+		<script type="text/javascript">document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
+		<nav>
+			<div class='navbar navbar-inverse navbar-static-top' id='topbar'>
+				<div class='container'>
+					<div class='navbar-inner'>
+						<h1><%= yield(:title) %></h1>
+						<a class='brand' href='/'>
+							<img alt="Logo" src="http://assets.theodi.org/img/logo-footer.png" />
+						</a>
+					</div>
+				</div>
+			</div>
 
-  <body<%= content_for?(:body_classes) ? " class=\"#{yield(:body_classes)}\"".html_safe : '' %>>
-      <script type="text/javascript">document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
+		  <div class="navbar navbar-static-top" id="mainnav">
+				<div class="container">
+					<div class="navbar-inner">
+					</div>
+				</div>
+			</div>
+		</nav>
 
-    <a href="#<%= local_assigns[:skip_id] || "content" %>" class="visuallyhidden">Skip to main content</a>
+		<div class="whiteout">
+	
+			<section>
+				<header>
+					<div class="container">
+						<h1><%= yield(:title) %></h1>
+					</div>
+				</header>
 
-    <header role="banner" id="global-header">
-      <div class="header-wrapper">
-        <div class="header-global">
-          <div class="header-logo">
-            <a href="/" title="Go to the GOV.UK homepage" id="logo" class="content">
-              <img src="<%= asset_path 'gov.uk_logotype-2x.png' %>" alt="GOV.UK">
-            </a>
-            <a href="#search" class="search-toggle js-header-toggle">Search</a>
-          </div>
+		    <%= banner_notification %>
 
-          <form id="search" class="site-search" action="/search" method="get" role="search">
-            <div class="content">
-              <label for="site-search-text">Search</label>
-              <input type="search" name="q" id="site-search-text" title="Search" class="js-search-focus">
-              <input class="submit" type="submit" value="Search" />
-            </div>
-          </form>
-        </div>
-      </div>
-    </header>
-    <!--end header-->
+				<div class='container main-default' id='wrapper'>
 
-    <div id="global-cookie-message">
-      <p>GOV.UK uses cookies to make the site simpler. <a href="/support/cookies">Find out more about cookies</a></p>
-    </div>
+		      <%= yield :content %>
 
-    <div id="global-browser-prompt">
-      <p>For a safer, faster, better experience online you should upgrade your browser. <a href="/support/browsers">Find out more about browsers</a> <a href="#" class="dismiss" title="Dismiss this message">Close</a></p>
-    </div>
+				</div>
+			</section>
 
-    <section id="user-satisfaction-survey">
-      <div class="wrapper">
-        <h1>Tell us what you think of GOV.UK</h1>
-        <p class="right"><a href="#survey-no-thanks" id="survey-no-thanks">No thanks</a></p>
-        <p><a href="https://www.surveymonkey.com/s/8TKJ96D" id="take-survey" target="_blank">Take the 5 minute survey</a> This will open a short survey on another website</p>
-      </div>
-    </section>
+		</div>
 
-    <%= banner_notification %>
-
-    <% unless local_assigns[:hide_nav] %>
-      <div id="global-breadcrumb" class="header-context">
-        <ol role="breadcrumbs" class="group">
-          <li><a href="/">Home</a></li>
-        </ol>
-      </div>
-    <% end %>
-
-    <div id="wrapper" class="group">
-      <%= yield :content %>
-    </div>
-
-    <footer class="group js-footer" id="footer" role="contentinfo">
-
-      <div class="footer-wrapper">
-        <div class="footer-categories">
-          <div class="footer-explore">
-            <h2>Services and information</h2>
-
-            <ul>
-              <li><a href="/browse/driving">Driving and transport</a></li>
-              <li><a href="/browse/benefits">Benefits</a></li>
-              <li><a href="/browse/business">Businesses and self-employed</a></li>
-              <li><a href="/browse/employing-people">Employing people</a></li>
-              <li><a href="/browse/abroad">Passports, travel and living abroad</a></li>
-              <li><a href="/browse/education">Education and learning</a></li>
-              <li><a href="/browse/working">Working, jobs and pensions</a></li>
-              <li><a href="/browse/housing">Housing and local services</a></li>
-              <li><a href="/browse/justice">Crime, justice and the law</a></li>
-              <li><a href="/browse/tax">Money and tax</a></li>
-              <li><a href="/browse/births-deaths-marriages">Births, deaths, marriages and care</a></li>
-              <li><a href="/browse/disabilities">Disabled people</a></li>
-              <li><a href="/browse/citizenship">Citizenship and life in the UK</a></li>
-            </ul>
-          </div>
-
-          <div class="footer-inside-government">
-            <h2>Departments and policy</h2>
-
-            <ul>
-              <li><a href="/government/how-government-works">How government works</a></li>
-              <li><a href="/government/organisations">Departments</a></li>
-              <li><a href="/government/world">Worldwide</a></li>
-              <li><a href="/government/topics">Topics</a></li>
-              <li><a href="/government/policies">Policies</a></li>
-              <li><a href="/government/publications">Publications</a></li>
-              <li><a href="/government/announcements">Announcements</a></li>
-            </ul>
-          </div>
-
-        </div>
-
-        <%= render partial: 'footer_meta' %>
-      </div>
-    </footer>
-
-    <!--end footer-->
+		<footer id='footer' style='clear: both'>
+	     <%= render partial: 'footer_meta' %>
+		</footer>
 
     <div id="global-app-error" class="app-error hidden"></div>
 
     <%= render partial: 'javascript', locals: { js_file: local_assigns[:js_file] || 'application' } if local_assigns[:js_at_the_end] %>
+
   </body>
 </html>
