--- a/app/views/root/_footer_meta.html.erb
+++ b/app/views/root/_footer_meta.html.erb
@@ -1,22 +1,18 @@
-<div class="footer-meta">
-  <div class="footer-meta-inner">
-    <h2 class="visuallyhidden">Support links</h2>
-    <ul>
-      <li><a href="/support">Support</a></li>
-      <li><a href="/support/cookies">Cookies</a></li>
-      <li><a href="/feedback">Feedback</a></li>
-      <li><a href="/cymraeg">Cymraeg</a></li>
-      <li>Built by the <a href="http://digital.cabinetoffice.gov.uk/">Government Digital Service</a></li>
-    </ul>
-
-
-    <div class="open-government-licence">
-      <h2><a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/2"><%= image_tag 'open-government-licence_2x.png', alt: 'OGL' %></a></h2>
-      <p>All content is available under the <a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/2">Open Government Licence v2.0</a>, except where otherwise stated</p>
-    </div>
-  </div>
-
-  <div class="copyright">
-    <a href="http://www.nationalarchives.gov.uk/information-management/our-services/crown-copyright.htm">&copy; Crown Copyright</a>
-  </div>
+<div class='container'>
+	<div class='span8 footer-content'>
+		<h1><a href='http://www.theodi.org'>Open Data Institute</a></h1>
+		<p> <a href='http://www.openstreetmap.org/?lat=51.522205&amp;lon=-0.08176500000001852&amp;zoom=16&amp;layers=T&amp;mlat=51.52210&amp;mlon=-0.08343'>Open Data Institute</a><span>, 65 Clifton Street, London EC2A 4JE</span></p>
+		<p><a href='mailto:info@theodi.org'>info@theodi.org</a> · Company <a href='http://opencorporates.com/companies/gb/08030289'>08030289</a>	· <span>VAT</span> <span>143 7796 80</span></p>
+		<p class='license'><a href='http://creativecommons.org/licenses/by-sa/2.0/uk/deed.en_GB' rel='license'><img alt="Creative Commons Licence" height="15" src="http://theodi.github.io/p2p/img/logo_cc_80x15.png" width="80" /></a></p>
+	</div>
+	<div class='span4 footer-nav'>
+		<nav>
+			<ul class='pull-right'>
+				<li><a href="http://theodi.org/privacy-policy">Privacy Policy</a></li>
+				<li><a href="http://theodi.org/terms-of-use">Terms of Use</a></li>
+				<li><a href="http://theodi.org/cookie-policy">Cookie Policy</a></li>
+				<li><a href="http://theodi.org/feedback">Feedback</a></li>
+			</ul>
+		</nav>
+	</div>
 </div>
