Reinstate banner so tests pass

--- a/app/views/root/_base.html.erb
+++ b/app/views/root/_base.html.erb
@@ -42,6 +42,8 @@
 			</div>
 		</nav>
 
+		<%= banner_notification %>
+		
 		<div class="whiteout">
 			<div id='wrapper'>
 					<!-- Wrapper from client app will be inserted here -->
