Add "Under Construction" gif

--- a/app/views/root/_base.html.erb
+++ b/app/views/root/_base.html.erb
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<% html_classes = content_for?(:html_classes) ? "#{yield(:html_classes)}" : ''%>
-	<!--[if lt IE 9]><html class="lte-ie8 <%= html_classes %>" lang="en"><![endif]-->
-	<!--[if gt IE 8]><!--><html lang="en" class="<%= html_classes %>"><!--<![endif]-->
 	<head>
 	  <title><!-- WAT --></title>
 
@@ -29,6 +27,7 @@
 						<h1><%= yield(:title) %></h1>
 						<a class='brand' href='/'>
 							<img alt="Logo" src="http://assets.theodi.org/img/logo-footer.png" />
+<img alt="Under Construction" src="http://www.textfiles.com/underconstruction/CaCapeCanaveralOrbit2498underconstruction1.gif" />
 						</a>
 					</div>
 				</div>
