Remove various GDS specific things that we don't need.

--- a/app/views/root/_five_hundred_error.html.erb
+++ b/app/views/root/_five_hundred_error.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title do %>Sorry, we are experiencing technical difficulties (<%= status_code %> error) - GOV.UK<% end %>
+<% content_for :title do %>Sorry, we are experiencing technical difficulties (<%= status_code %> error)<% end %>
 
 <% content_for :html_classes do %>error error-50X<% end %>
 
