--- a/app/views/root/related.raw.html.erb
+++ b/app/views/root/related.raw.html.erb
@@ -1,4 +1,4 @@
-<%# Whilst they are both in use, this and the test copy in slimmer should be kept in sync %>
+<%# This is the original GDS version. We would want to change this if we wanted to use it. %>
 <% if artefact and artefact.related_artefacts.any? %>
 
 <!-- related -->
