--- a/app/views/root/_dapaas_main.erb
+++ b/app/views/root/_dapaas_main.erb
@@ -31,7 +31,7 @@
 
 <body>
     <header class="site-header">
-      <%= render :partial => 'root/navbar', :locals => { :mobile => false } %>
+      <%= render :partial => 'root/dapaas_navbar', :locals => { :mobile => false } %>
       
       <div class="collapse navbar-collapse">        
         <div class="navbar navbar-static-top">
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 footer-content">
-                    <h1 class="footer-logo"><a href="http://www.theodi.org">Open Data Institute</a></h1>
+                    <h1 class="dapaas-footer-logo"><a href="http://www.theodi.org">Open Data Institute</a></h1>
                     <p><a href="http://www.theodi.org/contact">Open Data Institute, 65 Clifton Street, London EC2A 4JE</a></p>
                     <p><a href="mailto:info@theodi.org">info@theodi.org</a> Company <a href="http://opencorporates.com/companies/gb/08030289">08030289</a> 
                         <span>VAT</span><span>143 7796 80</span>
