--- a/app/views/root/_dapaas_main.erb
+++ b/app/views/root/_dapaas_main.erb
@@ -86,9 +86,9 @@
                 <div class="col-md-4 footer-nav">
                     <nav>
                         <ul class="pull-right list-inline">
-                            <li><a href="/terms-of-use">Terms of use</a></li>
-                            <li><a href="/privacy-policy">Privacy policy</a></li>
-                            <li><a href="/cookie-policy">Cookie policy</a></li>
+                            <li><a href="/dapaas-terms-of-use">Terms of use</a></li>
+                            <li><a href="/dapaas-privacy-policy">Privacy policy</a></li>
+                            <li><a href="/dapaas-cookie-policy">Cookie policy</a></li>
                         </ul>
                     </nav>
                 </div>
