--- a/app/views/root/_dapaas_navbar.html.erb
+++ b/app/views/root/_dapaas_navbar.html.erb
@@ -50,7 +50,7 @@
     </form>
     -->
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="/contact">Contact us</a></li>
+      <li><a href="/dapaas-contact-us">Contact us</a></li>
       <!-- <li><a href="#about">Sign in</a></li> -->
     </ul>
   </div>
