Add newsletter link

--- a/app/views/root/_navbar.html.erb
+++ b/app/views/root/_navbar.html.erb
@@ -51,6 +51,8 @@
     -->
     <ul class="nav navbar-nav navbar-right">
       <li><a href="/contact">Contact us</a></li>
+      <li><a href="/newsletters">Newsletters</a></li>
+      
       <!-- <li><a href="#about">Sign in</a></li> -->
     </ul>
   </div>
