Add colour class to body

--- a/app/views/root/_labs_main.erb
+++ b/app/views/root/_labs_main.erb
@@ -28,7 +28,7 @@
     <!--[if lt IE 7]><%= stylesheet_link_tag "ie6.css" %><![endif]-->
 </head>
 
-<body>
+<body class="odi-<%= colour %>">
     <header class="site-header">
       <%= render :partial => 'root/labs_navbar', :locals => { :mobile => false, :title => title, :status => status } %>
       
