--- a/app/views/root/csvlint.html.erb
+++ b/app/views/root/csvlint.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'labs_main', :locals => { :title => "CSVlint", :menu => "csvlint", :status => "beta" } %>
+<%= render partial: 'labs_main', :locals => { :title => "CSV Lint", :menu => "csvlint", :status => "alpha", :colour => 'orange' } %>
