--- a/app/assets/stylesheets/labs.scss
+++ b/app/assets/stylesheets/labs.scss
@@ -23,49 +23,89 @@ h1.site-title {
   .page-title, .site-title .status {
     background-color: $odiBlue;
   }
+  .caret {
+    border-top-color: $odiBlue;
+    border-bottom-color: $odiBlue;
+  }
 }
 .odi-blue-dark {
   .page-title, .site-title .status {
     background-color: $odiBlueDark;
+  }
+  .caret {
+    border-top-color: $odiBlueDark;
+    border-bottom-color: $odiBlueDark;
   }
 }
 .odi-blue-light {
   .page-title, .site-title .status {
     background-color: $odiBlueLight;
   }
+  .caret {
+    border-top-color: $odiBlueLight;
+    border-bottom-color: $odiBlueLight;
+  }
 }
 .odi-orange {
   .page-title, .site-title .status {
     background-color: $odiOrange;
+  }
+  .caret {
+    border-top-color: $odiOrange;
+    border-bottom-color: $odiOrange;
   }
 }
 .odi-red {
   .page-title, .site-title .status {
     background-color: $odiRed;
   }
+  .caret {
+    border-top-color: $odiRed;
+    border-bottom-color: $odiRed;
+  }
 }
 .odi-orange {
   .page-title, .site-title .status {
     background-color: $odiOrange;
+  }
+  .caret {
+    border-top-color: $odiOrange;
+    border-bottom-color: $odiOrange;
   }
 }
 .odi-green {
   .page-title, .site-title .status {
     background-color: $odiColour5;
   }
+  .caret {
+    border-top-color: $odiColour5;
+    border-bottom-color: $odiColour5;
+  }
 }
 .odi-turquoise {
   .page-title, .site-title .status {
     background-color: $odiColour6;
+  }
+  .caret {
+    border-top-color: $odiColour6;
+    border-bottom-color: $odiColour6;
   }
 }
 .odi-magenta {
   .page-title, .site-title .status {
     background-color: $odiColour11;
   }
+  .caret {
+    border-top-color: $odiColour11;
+    border-bottom-color: $odiColour11;
+  }
 }
 .odi-purple {
   .page-title, .site-title .status {
     background-color: $odiColour12;
+  }
+  .caret {
+    border-top-color: $odiColour12;
+    border-bottom-color: $odiColour12;
   }
 }
