--- a/app/views/root/_dapaas_main.erb
+++ b/app/views/root/_dapaas_main.erb
@@ -94,6 +94,7 @@
                     </nav>
                 </div>
             </div>
+            <p class="fp7">DaPaaS is funded co-funded by the European Commission under the <a href="http://cordis.europa.eu/fp7/home_en.html">Seventh Framework Programme (FP7 2007-2013)</a></p>
         </div>
     </footer>
     
