--- a/app/views/root/_www_main.erb
+++ b/app/views/root/_www_main.erb
@@ -88,19 +88,19 @@
              <div class="col-md-4 footer-nav">
                 <nav><ul class="pull-right list-inline">
                         <li><a href="http://www.https://twitter.com/UKODI" class=" ">
-                            <%= image_tag('twitter.png', alt: "Follow us on Twitter" title: "Follow us on Twitter") %></a></li>
+                            <%= image_tag('twitter.png', alt: "Follow us on Twitter", title: "Follow us on Twitter") %></a></li>
                         <li><a href="https://soundcloud.com/theodi" class=" ">
-                            <%= image_tag('soundcloud.png', alt: "Listen on Soundcloud" title: "Listen on Soundcloud") %></a></li>
+                            <%= image_tag('soundcloud.png', alt: "Listen on Soundcloud", title: "Listen on Soundcloud") %></a></li>
                         <li><a href="http://www.scribd.com/OpenDataInstitute" class=" ">
-                            <%= image_tag('scribd.png', alt: "Read on Scribd" title: "Read on Scribd") %></a></li>
+                            <%= image_tag('scribd.png', alt: "Read on Scribd", title: "Read on Scribd") %></a></li>
                         <li><a href="https://github.com/orgs/theodi" class=" ">
-                            <%= image_tag('github.png', alt: "Follow us on Github" title: "Follow us on Github") %></a></li>
+                            <%= image_tag('github.png', alt: "Follow us on Github", title: "Follow us on Github") %></a></li>
                         <li><a href="http://vimeo.com/theodiuk" class=" ">
-                            <%= image_tag('vimeo.png', alt: "Watch on Vimeo" title: "Watch on Vimeo") %></a></li>
+                            <%= image_tag('vimeo.png', alt: "Watch on Vimeo", title: "Watch on Vimeo") %></a></li>
                         <li><a href="http://www.youtube.com/user/OpenDataInstituteUK" class=" ">
-                            <%= image_tag('youtube.png', alt: "Watch on Youtube" title: "Watch on Youtube") %></a></li>
+                            <%= image_tag('youtube.png', alt: "Watch on Youtube", title: "Watch on Youtube") %></a></li>
                         <li><a href="http://www.flickr.com/photos/ukodi/" class=" ">
-                            <%= image_tag('flickr.png', alt: "Follow us on Flickr" title: "Follow us on Flickr") %></a></li>
+                            <%= image_tag('flickr.png', alt: "Follow us on Flickr", title: "Follow us on Flickr") %></a></li>
                     </ul></nav>
                 <br> 
                 <br>
