--- a/app/views/root/_dapaas_main.erb
+++ b/app/views/root/_dapaas_main.erb
@@ -2,7 +2,7 @@
 <html lang="en" class="no-js">
 
 <head>
-  
+
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= stylesheet_link_tag    "labs", :media => "all" %>
     <%= stylesheet_link_tag    "dapaas", :media => "all" %>
@@ -14,15 +14,15 @@
     <!--[if lt IE 9]>
       <%= javascript_include_tag "html5shiv.js" %>
     <![endif]-->
-    
+
     <!-- Respond.js in IE7 and IE8 only -->
     <!--[if (IE 7)|(IE 8)]>
       <%= javascript_include_tag "respond.min.js" %>
     <![endif]-->
-    
+
     <!-- Modernizr to detect CSS transitions etc., for Masonry animations -->
     <%= javascript_include_tag "modernizr.custom.js" %>
-    
+
     <!-- IE-only stylesheets -->
     <!--[if lte IE 9]><%= stylesheet_link_tag "ie9.css" %><![endif]-->
     <!--[if lte IE 8]><%= stylesheet_link_tag "ie8.css" %><![endif]-->
@@ -33,8 +33,8 @@
 <body class="odi-green">
     <header class="site-header">
       <%= render :partial => 'root/dapaas_navbar', :locals => { :mobile => false } %>
-      
-      <div class="collapse navbar-collapse">        
+
+      <div class="collapse navbar-collapse">
         <div class="navbar navbar-static-top">
           <div class="container">
             <div class="pull-right">
@@ -62,9 +62,9 @@
             </div>
           </div>
         </div>
-        
+
         <%= render :partial => 'root/navbar', :locals => { :mobile => true } %>
-        
+
       </div>
 
     </header> <!-- /site-header -->
@@ -94,12 +94,12 @@
                     </nav>
                 </div>
             </div>
-            <p class="fp7">DaPaaS is funded co-funded by the European Commission under the <a href="http://cordis.europa.eu/fp7/home_en.html">Seventh Framework Programme (FP7 2007-2013)</a></p>
+            <p class="fp7">DaPaaS is co-funded by the European Commission under the <a href="http://cordis.europa.eu/fp7/home_en.html">Seventh Framework Programme (FP7 2007-2013)</a></p>
         </div>
     </footer>
-    
+
     <%= javascript_include_tag "application" %>
-    
+
     <!-- No collapsible nav in IE6 -->
     <!--[if gt IE 7]><!-->
     <%= javascript_include_tag "bootstrap/bootstrap-collapse.js" %>
