--- a/app/assets/stylesheets/dapaas.css.scss
+++ b/app/assets/stylesheets/dapaas.css.scss
@@ -9,11 +9,17 @@
   font-weight: bold;
 }
 
+@font-face {
+  font-family: 'Bariol';
+  src: url(asset_path('Bariol_Light.otf', 'fonts'));
+  font-weight: 100;
+}
+
 $dapaas-black: #272727;
 $dapaas-green: #00E756;
 
 body {
-  font-family: "Bariol", "Helvetica Neue", Helvetica, Arial, sans-serif;;
+  font-family: "Bariol", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 #dapaas-navbar {
@@ -48,6 +54,19 @@ body {
   }
 }
 
+#dapaas-hero {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  background: image-url('dapaas-hero-cloud.png') right no-repeat;
+  padding-right: 400px;
+
+  h1 {
+    font-size: 90px;
+    color: $dapaas-green;
+    font-weight: 100;
+  }
+}
+
 #dapaas-main-nav {
   background-color: $dapaas-green;
   font-size: 23px;
@@ -58,8 +77,45 @@ body {
   }
 }
 
+#wrapper {
+  background-color: #f1f1f1;
+  padding-top: 30px;
+  padding-bottom: 30px;
+
+  .page-title {
+    background-color: transparent;
+    margin-bottom: 10px;
+
+    h1 {
+      font-size: 40px;
+      color: $dapaas-black;
+      font-family: "Bariol", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+  }
+
+  .module-heading {
+    font-family: "Bariol", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  }
+
+  .article-body {
+    h2 {
+      font-family: "Bariol", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-weight: bold;
+      font-size: 23px;
+    }
+
+    & > p:first-of-type {
+      font-size: 27px;
+      line-height: 1.2em;
+    }
+
+    font-size: 17px;
+  }
+}
+
 #dapaas-footer {
   background-color: $dapaas-black;
+  margin-top: 0;
 
   #dapaas-footer-logo {
     margin: 0 0 17px 0;
