--- a/app/views/root/_dapaas_main.erb
+++ b/app/views/root/_dapaas_main.erb
@@ -34,6 +34,11 @@
     <header class="site-header">
       <%= render :partial => 'root/dapaas_navbar', :locals => { :mobile => false } %>
 
+      <div id="dapaas-hero" class="container">
+        <h1>Data for publishers and consumers</h1>
+      </div>
+
+
       <div class="collapse navbar-collapse" id="dapaas-main-nav">
         <div class="navbar navbar-static-top">
           <div class="container">
