--- a/app/views/root/_dapaas_main.erb
+++ b/app/views/root/_dapaas_main.erb
@@ -34,7 +34,7 @@
     <header class="site-header">
       <%= render :partial => 'root/dapaas_navbar', :locals => { :mobile => false } %>
 
-      <div id="dapaas-hero" class="container">
+      <div id="dapaas-hero" class="container hidden-sm hidden-xs">
         <h1>Data for publishers and consumers</h1>
       </div>
 
