--- a/app/assets/stylesheets/dapaas.css.scss
+++ b/app/assets/stylesheets/dapaas.css.scss
@@ -64,6 +64,7 @@ body {
     font-size: 90px;
     color: $dapaas-green;
     font-weight: 100;
+    font-family: "Bariol", "Helvetica Neue", Helvetica, Arial, sans-serif;
   }
 }
 
