Add Twitter link

--- a/app/views/root/_dapaas_navbar.html.erb
+++ b/app/views/root/_dapaas_navbar.html.erb
@@ -41,7 +41,7 @@
     <% end %>
 
     <ul class="nav navbar-nav navbar-right" id="dapaas-nav">
-      <li class="social"><a href="/dapaas-contact-us" class="fa fa-twitter fa-lg"></a></li>
+      <li class="social"><a href="http://twitter.com/dapaasproject" class="fa fa-twitter fa-lg"></a></li>
       <li class="social"><a href="/dapaas-contact-us" class="fa fa-linkedin fa-lg"></a></li>
       <li><a href="/dapaas-contact-us">Get in touch</a></li>
 
