--- a/app/views/root/_navbar.html.erb
+++ b/app/views/root/_navbar.html.erb
@@ -2,18 +2,18 @@
   <div class="container">
     <% unless mobile %>
       <div class="navbar-header">
-        
+
        <!-- Mobile nav toggle -->
        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
            <span class="icon-bar"></span>
            <span class="icon-bar"></span>
            <span class="icon-bar"></span>
        </button>
-        
+
         <a class="navbar-brand" href="/"><%= image_tag('logo-footer.png', alt: "The ODI", id: "odi-logo") %></a>
-        
+
       </div>
-      
+
       <div class="modal fade" id="getLogo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -25,7 +25,7 @@
             <div class="modal-body">
                   <p>A full set of branding materials including logos and images will soon be available.</p>
 
-              <p>In the meantime, if you want to use our logo, please use one of those below. If you have any queries or questions, please contact <a href="mailto:emma.thwaites@theodi.org">emma.thwaites@theodi.org</a> on 07990 804805</p>
+              <p>In the meantime, if you want to use our logo, please use one of those below. If you have any queries or questions, please contact <a href="mailto:emma.thwaites@theodi.org">emma.thwaites@theodi.org</a></p>
 
               <p><a rel="external" href="http://bd7a65e2cb448908f934-86a50c88e47af9e1fb58ce0672b5a500.r32.cf3.rackcdn.com/uploads/assets/legacy/ODI%2Dlogo%2Dsml.png"><img src="http://bd7a65e2cb448908f934-86a50c88e47af9e1fb58ce0672b5a500.r32.cf3.rackcdn.com/uploads/assets/legacy/ODI%2Dlogo%2Dsml.png" alt=""></a></p>
 
@@ -52,7 +52,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li><a href="/contact">Contact us</a></li>
       <li><a href="/newsletters">Newsletters</a></li>
-      
+
       <!-- <li><a href="#about">Sign in</a></li> -->
     </ul>
   </div>
