--- a/app/views/root/_dapaas_navbar.html.erb
+++ b/app/views/root/_dapaas_navbar.html.erb
@@ -20,7 +20,9 @@
         <div class="form-group">
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Search" name="q"/>
-            <input type="submit" value="Go" class="btn"/>
+            <button class="btn" type="submit">
+              <i class="fa fa-search"></i>
+            </button>
           </div>
         </div>
       </form>
