--- a/app/assets/stylesheets/dapaas.css.scss
+++ b/app/assets/stylesheets/dapaas.css.scss
@@ -32,6 +32,11 @@ body {
   .navbar-form {
     .form-control {
       background-color: #fff;
+
+      &::-webkit-input-placeholder { color: #7491A3; }
+      &::-moz-placeholder { color: #7491A3; }
+      &:-moz-placeholder { color: #7491A3; }
+      &:-ms-input-placeholder { color: #7491A3; }
     }
 
     .btn {
