--- a/app/views/root/_navbar.html.erb
+++ b/app/views/root/_navbar.html.erb
@@ -10,7 +10,7 @@
            <span class="icon-bar"></span>
        </button>
 
-        <a class="navbar-brand" href="/"><%= image_tag('logo-footer.png', alt: "The ODI", id: "odi-logo") %></a>
+        <a class="navbar-brand" href="/"><%= image_tag('logo-header.png', alt: "The ODI", id: "odi-logo") %></a>
 
       </div>
 
