Add infinite scroll

--- a/app/views/root/_www_main.erb
+++ b/app/views/root/_www_main.erb
@@ -131,6 +131,7 @@
     <!-- Don't load these on IE 7 or below -->
     <!--[if gt IE 7]><!-->
     <%= javascript_include_tag "masonry.js" %>
+    <%= javascript_include_tag "infinitescroll.js" %>
     <%= javascript_include_tag "background-check.js" %>
     <!--<![endif]-->
 
