--- a/app/views/root/_dapaas_main.erb
+++ b/app/views/root/_dapaas_main.erb
@@ -35,7 +35,7 @@
       <%= render :partial => 'root/dapaas_navbar', :locals => { :mobile => false } %>
 
       <div id="dapaas-hero" class="container hidden-sm hidden-xs">
-        <h1>Data for publishers and consumers</h1>
+        <h1>Making open data work for you</h1>
       </div>
 
       <div class="collapse navbar-collapse" id="dapaas-main-nav">
