--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -878,6 +878,88 @@ hr {
 
 }
 
+#coursesTopBlock {
+        height: 290px;
+        p {
+                display: inline-block;
+                min-width: 30%;
+                max-width: 50%;
+                padding-left: 50px;
+                padding-top: 40px;
+                padding-right: 10px;
+        }
+        img {
+                display: inline-block;
+                max-width: 50%;
+                float: right;
+                min-width: 20%;
+        }
+}
+#course {
+        display: inline-block;
+        vertical-align: top;
+        width: 550px;
+        .module2 {
+                height: 280px;
+        }
+        ul, .course_properties {
+                width: 50%;
+                display: inline-block;
+                padding: 0;
+                position: absolute;
+                bottom: 20px;
+                li {
+                        list-style: none;
+                        display: inline;
+                        margin-right: 15px;
+                        margin-left: 5px;
+                        img {
+                                display: inline-block;
+                                margin: 0;
+                        }
+                }
+        }
+	.instances {
+                width: 50%;
+                display: inline-block;
+                position: absolute;
+                top: 175px;
+                right: 20px;
+                .noInstances {
+                        padding-top: 5px;
+                        text-align: center;
+                }
+                small {
+                        font-size: 0.7em;
+                }
+                ul {
+                        padding-left: 10px;
+                        padding-top: 5px;
+                        position: relative;
+                        display: inline-block;
+                        width: 100%;
+                        bottom: 0px;
+                        padding: 0;
+                        li {
+                                list-style: none;
+                                display: block;
+                                height: 34px;
+                                .courseButton {
+                                        padding-top: 3px;
+                                        padding-bottom: 3px;
+                                }
+                                .bookButton {
+                                        float: right;
+                                        position: relative;
+                                        bottom: 3px;
+                                }
+                        }
+                }
+        }
+}
+
+
+
 /*------------------------------------*\
     PEOPLE MODULES
 \*------------------------------------*/
