--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -879,18 +879,20 @@ hr {
 }
 
 #coursesTopBlock {
-        height: 290px;
+        margin-left: 40px;
+	margin-right: 15px;
+	height: 390px;
         p {
                 display: inline-block;
-                min-width: 30%;
-                max-width: 50%;
-                padding-left: 50px;
-                padding-top: 40px;
+                min-width: 20%;
+                max-width: 33%;
+                padding-left: 10px;
+                padding-top: 10px;
                 padding-right: 10px;
         }
         img {
                 display: inline-block;
-                max-width: 50%;
+                max-width: 66%;
                 float: right;
                 min-width: 20%;
         }
