--- a/app/assets/stylesheets/dapaas.css.scss
+++ b/app/assets/stylesheets/dapaas.css.scss
@@ -44,13 +44,18 @@ body {
       border: solid 1px #666;
       border-radius: 0;
       color: #000;
-      height: 34px;
+      height: 30px;
+      padding: 6px 10px;
       display: block;
       float: left;
-      margin-left: -3px;
+      margin: 7px 0 0 -4px;
       &:hover {
         background-color: #ff6700;
         color: #fff;
+      }
+      i {
+        top: -4px;
+        position: relative;
       }
     }
   }
