Minor adjustments to style of training page

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -881,11 +881,9 @@ hr {
 #coursesTopBlock {
         margin-left: 40px;
 	margin-right: 15px;
-	height: 390px;
         p {
                 display: inline-block;
-                min-width: 20%;
-                max-width: 33%;
+                min-width: 555px;
                 padding-left: 10px;
                 padding-top: 10px;
                 padding-right: 10px;
