Add a1 web stats on Patrik's request

--- a/app/views/root/_www_main.erb
+++ b/app/views/root/_www_main.erb
@@ -120,6 +120,8 @@
         </div>
     </footer>
 
+    <%= render partial: 'root/a1webstats' %>
+
     <%= javascript_include_tag "application" %>
 
     <!-- No collapsible nav in IE6 -->
