Changed URL in the footer

--- a/app/views/root/_www_main.erb
+++ b/app/views/root/_www_main.erb
@@ -87,7 +87,7 @@
                 </div>
              <div class="col-md-4 footer-nav">
                 <nav><ul class="pull-right list-inline">
-                        <li><a href="http://www.twitter.com/UKODI" class=" ">
+                        <li><a href="http://www.twitter.com/ODIHQ" class=" ">
                             <%= image_tag('twitter.png', alt: "Follow us on Twitter", title: "Follow us on Twitter") %></a></li>
                         <li><a href="https://soundcloud.com/theodi" class=" ">
                             <%= image_tag('soundcloud.png', alt: "Listen on Soundcloud", title: "Listen on Soundcloud") %></a></li>
