--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1744,7 +1744,7 @@ table.events td {
   font-size:16px;
 }
 
-.date {
+.date-events {
   font-family:helvetica;
   text-align:center;
   font-style:bold;
