--- a/app/views/root/_navbar.html.erb
+++ b/app/views/root/_navbar.html.erb
@@ -18,15 +18,14 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title" id="myModalLabel">Looking for logos?
+              <h4 class="modal-title" id="myModalLabel">Welcome to the ODI
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
               </h4>
             </div>
             <div class="modal-body">
-                  <p>A full set of branding materials including logos and images will soon be available.</p>
-
-              <p>In the meantime, if you want to use our logo, please use one of those below. If you have any queries or questions, please contact <a href="mailto:emma.thwaites@theodi.org">emma.thwaites@theodi.org</a></p>
-
+              <P>Knowledge for everyone</P>
+              <P>The ODI helps to unlock the value of open data.</P>
+              <P>If you want to use our logo, different sizes and types are here: <a href="http://theodi.org/brand">http://theodi.org/brand</a></P>
               <p><a rel="external" href="http://bd7a65e2cb448908f934-86a50c88e47af9e1fb58ce0672b5a500.r32.cf3.rackcdn.com/uploads/assets/legacy/ODI%2Dlogo%2Dsml.png"><img src="http://bd7a65e2cb448908f934-86a50c88e47af9e1fb58ce0672b5a500.r32.cf3.rackcdn.com/uploads/assets/legacy/ODI%2Dlogo%2Dsml.png" alt=""></a></p>
 
               <p><a rel="external" href="http://bd7a65e2cb448908f934-86a50c88e47af9e1fb58ce0672b5a500.r32.cf3.rackcdn.com/uploads/assets/legacy/ODI%2Dlogo%2Dmed.png"><img src="http://bd7a65e2cb448908f934-86a50c88e47af9e1fb58ce0672b5a500.r32.cf3.rackcdn.com/uploads/assets/legacy/ODI%2Dlogo%2Dmed.png" alt=""></a></p>
